<?xml version="1.0"?>
<package format="2">
  <name>Synchronizer</name>
  <version>0.0.0</version>
  <description>The Synchronizer package</description>

  <maintainer email="sheffieldwang@todo.todo">sheffieldwang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>messgae_runtime</build_depend>
<build_depend>jsk_recognition_msgs</build_depend>  
<exec_depend>jsk_recognition_msgs</exec_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
